refactor: add context to TokenValidationService (#3760)
* refactor: adapt API of TokenValidationService

* renamed oauth2 rules, created new ones for IATP

* renamed jwt-core -> token-core, use central rule registry

* split jwt-spi up into token-spi

* checkstyle, upgrade to gradle 8.5

* JwtPresentationVerifier uses TokenValidationService and -Registry